# riemann-hypothesis-research

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: INTERPRETATION_LIMITS.md  NUMERICAL_METHODS.md  RESEARCH_PROGRAM.md
experiments/: README.md
experiments/2026-07-22-first-zeros/: README.md  commands.txt  environment.txt  results.jsonl  statistics.json  summary.md
scripts/: scan_hardy_z.py  verify_zeros.py  zero_statistics.py
src/riemann_lab/: __init__.py  core.py
tests/: test_core.py
